# static-canvas

./: .gitignore  CHANGES.md  LICENSE  README.md  static-canvas.cabal
examples/: Bench.hs  Dash.hs  Ellipse.hs  Image.hs  Image.html  Line.hs  Line.html  LineCap.hs  LineCap.html  LineColor.hs  LineColor.html  LineWidth.hs  LineWidth.html  LinearGradient.hs  LinearGradient.html  MiterLimit.hs  MiterLimit.html  Pattern.hs  Pattern.html  Rectangle.hs  Rectangle.html  Shape.hs  Shape.html  Text.hs  Text.html
src/Graphics/: Static.hs
src/Graphics/Static/: ColorNames.hs  Internal.hs  Interpreter.hs  Javascript.hs  Types.hs
