name:                static-canvas
version:             0.1.0.0
synopsis:            Mini DSL to generate HTML5 Canvas javascript.
description:         Mini DSL to generate HTML5 Canvas javascript.
homepage:            https://github.com/jeffreyrosenbluth/static-canvas
license:             BSD3
license-file:        LICENSE
author:              Jeffrey Rosenbluth
maintainer:          jeffrey.rosenbluth@gmail.com
copyright:           2015 Jeffrey Rosenbluth
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall -rtsopts -O2
  exposed-modules:     Graphics.Static
                       Graphics.Static.ColorNames
  other-modules:       Graphics.Static.Types
                       Graphics.Static.Interpreter
                       Graphics.Static.Javascript
  build-depends:       base >=4.5 && < 4.9,
                       mtl >= 2.2 && < 2.3,
                       free >= 4.10 && < 4.11,
                       text >=0.11 && < 1.3,
                       double-conversion >= 2.0 && < 2.1
  hs-source-dirs:      src
  default-language:    Haskell2010